# cold-clear

./: .gitignore  Cargo.toml
bot/src/: dag.rs  desktop.rs  lib.rs
bot/src/evaluation/: changed.rs  standard.rs
bot/src/modes/: mod.rs  normal.rs
c-api/: coldclear.h
c-api/src/: lib.rs
libtetris/src/: board.rs  lock_data.rs  moves.rs  piece.rs
lua-api/: Cargo.toml
lua-api/src/: lib.rs
opening-book/src/: data.rs
